--- a/README
+++ b/README
@@ -4,6 +4,8 @@ Software for the Green Architect
 Read INSTALL (copied as reports/manual) for installation instructions.
 Read reports/report.pdf for a project overview and report.
 
+Green Primer is best viewed on a linux system using Google Chrome.
+
 The code base is in greenprimer/. The project follows a standard django
 project layout. All python code adheres to django coding conventions. In order
 to become comfortable with these conventions, see the documentation at
